--- a/index.html
+++ b/index.html
@@ -124,40 +124,46 @@
                     <p class="light">Limited supply: after sale ends, coin obtained only through mining & exchanges</p>
                 </div>
                 <div class="charts-container">
-                    <div class="chart-top-text">
-                        <h5 class="mini-title">Token Distribution</h5>
-                        <h5 class="mini-title">Allocation of funds</h5>
-                    </div>
                     <div class="sale-charts">
                         <div class="chart-one chart-container">
-                            <canvas id="chartOne" width="270" height="270"></canvas>
-                            <ul class="chart-legend">
-                                <li><span class="legend-circle" style="background-color:#51ffd0"></span>
-                                    Token Distribution</li>
-                                <li><span class="legend-circle" style="background-color:#ffe56a"></span>
-                                    Advisors & Partners</li>
-                                <li><span class="legend-circle" style="background-color:#f89c5a"></span>
-                                    Company Reserve</li>
-                                <li><span class="legend-circle" style="background-color:#ff5fae"></span>
-                                    Bounty</li>
-                                <li><span class="legend-circle" style="background-color:#8e51ff"></span>
-                                    Team</li>
-                            </ul>
+                            <div class="chart-title">
+                                <h5 class="mini-title">Token Distribution</h5>
+                            </div>
+                            <div class="chart-row">
+                                <canvas id="chartOne" width="270" height="270"></canvas>
+                                <ul class="chart-legend">
+                                    <li><span class="legend-circle" style="background-color:#51ffd0"></span>
+                                        Token Distribution</li>
+                                    <li><span class="legend-circle" style="background-color:#ffe56a"></span>
+                                        Advisors & Partners</li>
+                                    <li><span class="legend-circle" style="background-color:#f89c5a"></span>
+                                        Company Reserve</li>
+                                    <li><span class="legend-circle" style="background-color:#ff5fae"></span>
+                                        Bounty</li>
+                                    <li><span class="legend-circle" style="background-color:#8e51ff"></span>
+                                        Team</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="chart-two chart-container">
-                            <canvas id="chartTwo" width="270" height="270"></canvas>
-                            <ul class="chart-legend">
-                                <li><span class="legend-circle" style="background-color:#665fff"></span>
-                                    Marketing & Sales</li>
-                                <li><span class="legend-circle" style="background-color:#f89c5a"></span>
-                                    Product Development</li>
-                                <li><span class="legend-circle" style="background-color:#d95af8"></span>
-                                    Legal Expenses</li>
-                                <li><span class="legend-circle" style="background-color:#5aa5f8"></span>
-                                    Admin & Operations</li>
-                                <li><span class="legend-circle" style="background-color:#8e51ff"></span>
-                                    Overhead Expenses</li>
-                            </ul>
+                            <div class="chart-title">
+                                <h5 class="mini-title">Allocation of funds</h5>
+                            </div>
+                            <div class="chart-row">
+                                <canvas id="chartTwo" width="270" height="270"></canvas>
+                                <ul class="chart-legend">
+                                    <li><span class="legend-circle" style="background-color:#665fff"></span>
+                                        Marketing & Sales</li>
+                                    <li><span class="legend-circle" style="background-color:#f89c5a"></span>
+                                        Product Development</li>
+                                    <li><span class="legend-circle" style="background-color:#d95af8"></span>
+                                        Legal Expenses</li>
+                                    <li><span class="legend-circle" style="background-color:#5aa5f8"></span>
+                                        Admin & Operations</li>
+                                    <li><span class="legend-circle" style="background-color:#8e51ff"></span>
+                                        Overhead Expenses</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>        
                 </div>
