--- a/index.html
+++ b/index.html
@@ -64,25 +64,27 @@
             </div>
         </section>
         <!--  -->
-        <section class="section features-block">
+        <section class="section features">
             <div class="container">
                 <div class="section-title mini-title">
                     <h5>Coin Everywhere</h5>
                 </div>
-                <div class="feature-item">
-                    <img src="/justName/svg/feature-one.svg" alt="abstract icon">
-                    <h2>Banking Software</h2>
-                    <p>Using Coin, banks can source liquidity on demand in real time without having to pre-fund nostro accounts.</p>
-                </div>
-                <div class="feature-item">
-                    <img src="/justName/svg/feature-two.svg" alt="icon">
-                    <h2>Payment Providers</h2>
-                    <p>Payment Providers use Coin to lower foreign exchange costs and provide faster payment settlement.</p>
-                </div>
-                <div class="feature-item">
-                    <img src="/justName/svg/feature-three.svg" alt="icon">
-                    <h2>Digital Agreements</h2>
-                    <p>It’s the fastest and most scalable digital asset, enabling real-time global payments anywhere in the world.</p>
+                <div class="features-content">
+                    <div class="feature-item">
+                        <img src="/justName/svg/feature-one.svg" alt="abstract icon">
+                        <h2>Banking Software</h2>
+                        <p>Using Coin, banks can source liquidity on demand in real time without having to pre-fund nostro accounts.</p>
+                    </div>
+                    <div class="feature-item">
+                        <img src="/justName/svg/feature-two.svg" alt="icon">
+                        <h2>Payment Providers</h2>
+                        <p>Payment Providers use Coin to lower foreign exchange costs and provide faster payment settlement.</p>
+                    </div>
+                    <div class="feature-item">
+                        <img src="/justName/svg/feature-three.svg" alt="icon">
+                        <h2>Digital Agreements</h2>
+                        <p>It’s the fastest and most scalable digital asset, enabling real-time global payments anywhere in the world.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -127,7 +129,7 @@
                     <div class="sale-charts">
                         <div class="chart-one chart-container">
                             <div class="chart-title">
-                                <h5 class="mini-title">Token Distribution</h5>
+                                <h5>Token Distribution</h5>
                             </div>
                             <div class="chart-row">
                                 <canvas id="chartOne" width="270" height="270"></canvas>
@@ -147,7 +149,7 @@
                         </div>
                         <div class="chart-two chart-container">
                             <div class="chart-title">
-                                <h5 class="mini-title">Allocation of funds</h5>
+                                <h5>Allocation of funds</h5>
                             </div>
                             <div class="chart-row">
                                 <canvas id="chartTwo" width="270" height="270"></canvas>
@@ -181,7 +183,9 @@
                         <h1 class="blue">Together, We're Modernizing Global Payments</h1>
                         <p class="light">It’s the fastest and most scalable digital asset, enabling real-time global payments anywhere in the world</p>
                         <p>Today the world sends more than $155 trillion* across borders. Yet, the underlying infrastructure is dated and flawed. BestCoin connects banks, payment providers and digital asset exchanges via RippleNet to provide one frictionless experience to send money globally.</p>
-                        <a href="#" class="btn btn-primary">Read Our Mission</a>
+                        <div class="btn-container">
+                            <a href="#" class="btn btn-primary">Read Our Mission</a>
+                        </div>
                     </div>
                 </div>
                 <div class="trusted">
