--- a/index.html
+++ b/index.html
@@ -387,8 +387,8 @@
                         <h6 class="pinks">LEAD DEVELOPER</h6>
                     </div>
                     <div class="person">
-                        <img class="team-pic saleslead" src="/justName/images/team4.jpg" alt="Alice Hendrix image">
-                        <h5>Alice Hendrix</h5>
+                        <img class="team-pic saleslead" src="/justName/images/team4.jpg" alt="Amanda Pearl image">
+                        <h5>Amanda Pearl</h5>
                         <h6 class="pinks">SALES LEAD</h6>
                     </div>
                 </div>
