--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                         It's the fastest and most scalable digital asset, enabling real-time global ayments anywhere in the world.
                     </p>
                     <a class="btn btn-primary " href="#">Explore Coin
-                        <img src="/justName/svg/right-arrow.svg" alt="arrow">
+                        <img src="/BestCoin/svg/right-arrow.svg" alt="arrow">
                     </a>
                 </div>                
             </div>
         </section>
         <!--  -->
         <section class="graph">
-            <img src="/justName/svg/graph-light.svg" class="img-graph" alt="graph">
+            <img src="/BestCoin/svg/graph-light.svg" class="img-graph" alt="graph">
         </section>
         <!--  -->
         <section class="text-block">
@@ -71,17 +71,17 @@
                 </div>
                 <div class="features-content">
                     <div class="feature-item">
-                        <img src="/justName/svg/feature-one.svg" alt="abstract icon">
+                        <img src="/BestCoin/svg/feature-one.svg" alt="abstract icon">
                         <h2>Banking Software</h2>
                         <p>Using Coin, banks can source liquidity on demand in real time without having to pre-fund nostro accounts.</p>
                     </div>
                     <div class="feature-item">
-                        <img src="/justName/svg/feature-two.svg" alt="icon">
+                        <img src="/BestCoin/svg/feature-two.svg" alt="icon">
                         <h2>Payment Providers</h2>
                         <p>Payment Providers use Coin to lower foreign exchange costs and provide faster payment settlement.</p>
                     </div>
                     <div class="feature-item">
-                        <img src="/justName/svg/feature-three.svg" alt="icon">
+                        <img src="/BestCoin/svg/feature-three.svg" alt="icon">
                         <h2>Digital Agreements</h2>
                         <p>It’s the fastest and most scalable digital asset, enabling real-time global payments anywhere in the world.</p>
                     </div>
@@ -176,7 +176,7 @@
             <div class="container">
                 <div class="why-content">
                     <div class="img-container">
-                        <img src="/justName/images/checkout-illustration-light.jpg" alt="">
+                        <img src="/BestCoin/images/checkout-illustration-light.jpg" alt="">
                     </div>
                     <div class="text-container">
                         <h6 class="pinks">WHY BESTCOIN</h6>
@@ -194,19 +194,19 @@
                     </div>
                     <div class="logo-container">
                         <div class="logo">
-                            <img src="/justName/images/logo_1_dark.png" alt="">
+                            <img src="/BestCoin/images/logo_1_dark.png" alt="">
                         </div>
                         <div class="logo">
-                            <img src="/justName/images/logo_2_dark.png" alt="">
+                            <img src="/BestCoin/images/logo_2_dark.png" alt="">
                         </div>
                         <div class="logo">
-                            <img src="/justName/images/logo_3_dark.png" alt="">
+                            <img src="/BestCoin/images/logo_3_dark.png" alt="">
                         </div>
                         <div class="logo">
-                            <img src="/justName/images/logo_4_dark.png" alt="">
+                            <img src="/BestCoin/images/logo_4_dark.png" alt="">
                         </div>
                         <div class="logo">
-                            <img src="/justName/images/logo_5_dark.png" alt="">
+                            <img src="/BestCoin/images/logo_5_dark.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -372,22 +372,22 @@
                 </div>
                 <div class="team-container">
                     <div class="person">
-                        <img class="team-pic founder" src="/justName/images/team1.jpg" alt="Jessica Baker image">
+                        <img class="team-pic founder" src="/BestCoin/images/team1.jpg" alt="Jessica Baker image">
                         <h5>Jessica Baker</h5>
                         <h6 class="pinks">FOUNDER & CEO</h6>
                     </div>
                     <div class="person">
-                        <img class="team-pic operations" src="/justName/images/team2.jpg" alt="Samuel Fisher image">
+                        <img class="team-pic operations" src="/BestCoin/images/team2.jpg" alt="Samuel Fisher image">
                         <h5>Samuel Fisher</h5>
                         <h6 class="pinks">OPERATIONS</h6>
                     </div>
                     <div class="person">
-                        <img class="team-pic teamlead" src="/justName/images/team3.jpg" alt="Rishi Siddh image">
+                        <img class="team-pic teamlead" src="/BestCoin/images/team3.jpg" alt="Rishi Siddh image">
                         <h5>Rishi Siddh</h5>
                         <h6 class="pinks">LEAD DEVELOPER</h6>
                     </div>
                     <div class="person">
-                        <img class="team-pic saleslead" src="/justName/images/team4.jpg" alt="Amanda Pearl image">
+                        <img class="team-pic saleslead" src="/BestCoin/images/team4.jpg" alt="Amanda Pearl image">
                         <h5>Amanda Pearl</h5>
                         <h6 class="pinks">SALES LEAD</h6>
                     </div>
@@ -473,7 +473,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="/justName/js/carousel.js"></script>
-    <script src="/justName/js/chart.js"></script>
+    <script src="/BestCoin/js/carousel.js"></script>
+    <script src="/BestCoin/js/chart.js"></script>
 </body>
 </html>
