update for mobiles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
                             <li><a href="" class="nav-link">Token Sale</a></li>
                             <li><a href="" class="nav-link">Blog</a></li>
                             <li><a href="" class="nav-link">Contact</a></li>
-                            <li><a href="" class="nav-link nav-signup">Sign Up</a></li>
+                            <li>
+                                <div class="dropdown">
+                                    <a href="" class="nav-link dropbtn">Dropdown</a>
+                                    <div class="dropdown-content hidden">
+                                        <a href="#">Link 1</a>
+                                        <a href="#">Link 2</a>
+                                        <a href="#">Link 3</a>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -404,19 +413,19 @@
                     <p class="title-text lightblue text-center">Got questions about BestCoin or other crypto currency and ICO related qusetions? We have got answers. Check it out!</p>
                     <div class="faq-content">
                         <div class="question">
-                            <h2 class="blue">What is BestCoin Crypto Currency?</h2>
+                            <h2 class="blue q-title">What is BestCoin Crypto Currency?</h2>
                             <p class="lightblue">Conveniently redefine technically sound deliverables and extensive relationships. Intrinsicly benchmark collaborative web-readiness vis-a-vis professional core competencies.</p>
                         </div>
                         <div class="question">
-                            <h2 class="blue">When will your ICO Sale start?</h2>
+                            <h2 class="blue q-title">When will your ICO Sale start?</h2>
                             <p class="lightblue">Compellingly whiteboard dynamic products before low-risk high-yield ROI. Professionally foster cross functional leadership vis-a-vis covalent e-commerce. Dynamically cultivate fully tested schemas through ethical initiatives.</p>
                         </div>
                         <div class="question">
-                            <h2 class="blue">Do you have any bulk discounts?</h2>
+                            <h2 class="blue q-title">Do you have any bulk discounts?</h2>
                             <p class="lightblue">Conveniently redefine technically sound deliverables and extensive relationships. Intrinsicly benchmark collaborative web-readiness vis-a-vis professional core competencies.</p>
                         </div>
                         <div class="question">
-                            <h2 class="blue">What are the benefits of ICO Token?</h2>
+                            <h2 class="blue q-title">What are the benefits of ICO Token?</h2>
                             <p class="lightblue">Uniquely customize resource-leveling leadership whereas client-focused markets. Assertively whiteboard progressive infrastructures rather than high standards in alignments.</p>
                         </div>
                     </div>
@@ -434,7 +443,7 @@
                         <div class="footer-logo">
                             <p class="logo">Best<span>Coin</span></p>
                         </div>
-                        <p class="lightblue">BestCoin is the fastest and most scalable digital asset, enabling real-time global payments anywhere in the world.</p>
+                        <p class="lightblue footer-text">BestCoin is the fastest and most scalable digital asset, enabling real-time global payments anywhere in the world.</p>
                     </div>
                     <div class="footer mid">
                         <h6>CONTACT US</h6>
