update UI for mobiles

--- a/index.html
+++ b/index.html
@@ -20,25 +20,34 @@
                     <div class="header-logo">
                         <p class="logo">Best<span>Coin</span></p>
                     </div>
-                    <nav class="menu-body">
-                        <ul class="menu-list">
-                            <li><a href="" class="nav-link nav-features">Features</a></li>
-                            <li><a href="" class="nav-link">Use Cases</a></li>
-                            <li><a href="" class="nav-link">Token Sale</a></li>
-                            <li><a href="" class="nav-link">Blog</a></li>
-                            <li><a href="" class="nav-link">Contact</a></li>
-                            <li>
-                                <div class="dropdown">
-                                    <a href="" class="nav-link dropbtn">Dropdown</a>
-                                    <div class="dropdown-content hidden">
-                                        <a href="#">Link 1</a>
-                                        <a href="#">Link 2</a>
-                                        <a href="#">Link 3</a>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </nav>
+                    <div class="header-content">
+                        <nav class="menu-body">
+                            <ul class="menu-list">
+                                <li><a href="" class="nav-link nav-features">Features</a></li>
+                                <li><a href="" class="nav-link">Use Cases</a></li>
+                                <li><a href="" class="nav-link">Token Sale</a></li>
+                                <li><a href="" class="nav-link">Blog</a></li>
+                                <li><a href="" class="nav-link">Contact</a></li>
+                            </ul>
+                        </nav>
+                        <div class="dropdown">
+                            <a href="" class="nav-link dropbtn">Dropdown</a>
+                            <div class="dropdown-content hidden">
+                                <a href="#">Link 1</a>
+                                <a href="#">Link 2</a>
+                                <a href="#">Link 3</a>
+                            </div>
+                            <nav class="dropdown-menu hidden">
+                                <ul class="menu-list">
+                                    <li><a href="" class="nav-link nav-features">Features</a></li>
+                                    <li><a href="" class="nav-link">Use Cases</a></li>
+                                    <li><a href="" class="nav-link">Token Sale</a></li>
+                                    <li><a href="" class="nav-link">Blog</a></li>
+                                    <li><a href="" class="nav-link">Contact</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
         </header>
         <!-- hero -->
