Update for small displays

--- a/index.html
+++ b/index.html
@@ -423,19 +423,19 @@
                     <div class="faq-content">
                         <div class="question">
                             <h2 class="blue q-title">What is BestCoin Crypto Currency?</h2>
-                            <p class="lightblue">Conveniently redefine technically sound deliverables and extensive relationships. Intrinsicly benchmark collaborative web-readiness vis-a-vis professional core competencies.</p>
+                            <p class="lightblue q-text">Conveniently redefine technically sound deliverables and extensive relationships. Intrinsicly benchmark collaborative web-readiness vis-a-vis professional core competencies.</p>
                         </div>
                         <div class="question">
                             <h2 class="blue q-title">When will your ICO Sale start?</h2>
-                            <p class="lightblue">Compellingly whiteboard dynamic products before low-risk high-yield ROI. Professionally foster cross functional leadership vis-a-vis covalent e-commerce. Dynamically cultivate fully tested schemas through ethical initiatives.</p>
+                            <p class="lightblue q-text">Compellingly whiteboard dynamic products before low-risk high-yield ROI. Professionally foster cross functional leadership vis-a-vis covalent e-commerce. Dynamically cultivate fully tested schemas through ethical initiatives.</p>
                         </div>
                         <div class="question">
                             <h2 class="blue q-title">Do you have any bulk discounts?</h2>
-                            <p class="lightblue">Conveniently redefine technically sound deliverables and extensive relationships. Intrinsicly benchmark collaborative web-readiness vis-a-vis professional core competencies.</p>
+                            <p class="lightblue q-text">Conveniently redefine technically sound deliverables and extensive relationships. Intrinsicly benchmark collaborative web-readiness vis-a-vis professional core competencies.</p>
                         </div>
                         <div class="question">
                             <h2 class="blue q-title">What are the benefits of ICO Token?</h2>
-                            <p class="lightblue">Uniquely customize resource-leveling leadership whereas client-focused markets. Assertively whiteboard progressive infrastructures rather than high standards in alignments.</p>
+                            <p class="lightblue q-text">Uniquely customize resource-leveling leadership whereas client-focused markets. Assertively whiteboard progressive infrastructures rather than high standards in alignments.</p>
                         </div>
                     </div>
                     <div class="text-center btn-container">
@@ -462,7 +462,7 @@
                             <br>TN 37027-5237
                         </p>
                         <p class="lightblue footer-phone">Phone: 495.812.4589</p>
-                        <p class="lightblue footer-email">Email: gmfrens@bestcoin.com</p>
+                        <p class="lightblue footer-email">Email: w3seas@gmail.com</p>
                     </div>
                     <div class="footer right">
                         <h6>QUICK LINKS</h6>
@@ -483,7 +483,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="text-center copyright">Copyright © 2022. All rights reserved. BestCoin LLC</p>
+                <p class="text-center copyright">Copyright © 2022. All rights reserved.</p>
             </div>
         </footer>
     </div>
