--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </header>
         <!-- hero -->
         <section class="section hero">
-            <div class="container">
+            <!-- <div class="container"> -->
                 <div class="hero-content">
                     <div class="hero-title blue">
-                        <h1>The <span class="pink">Digital Assets</span> for Payments</h1>
+                        <h1 class="open-text">The <span class="pink">Digital Assets</span> for Payments</h1>
                     </div>
                     <p class="hero-description lightblue">
                         It's the fastest and most scalable digital asset, enabling real-time global ayments anywhere in the world.
@@ -64,7 +64,7 @@
                         <img src="/BestCoin/svg/right-arrow.svg" alt="arrow">
                     </a>
                 </div>                
-            </div>
+            <!-- </div> -->
         </section>
         <!--  -->
         <section class="graph">
