--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </ul>
                         </nav>
                         <div class="dropdown">
-                            <a href="" class="nav-link dropbtn">Dropdown</a>
+                            <div href="" class="dropbtn">Dropdown</div>
                             <div class="dropdown-content hidden">
                                 <a href="#">Link 1</a>
                                 <a href="#">Link 2</a>
